--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,7 +21,7 @@
   /* background: orange; */
   position: absolute;
   content: "";
-  z-index: 2;
+  /* z-index: 2; */
   width: 100;
   height: 100%;
   top: 0;
@@ -69,7 +69,7 @@
 
 .gradient {
   height: fit-content;
-  z-index: 3;
+  /* z-index: 3; */
   width: 100%;
   max-width: 640px;
   background-image: radial-gradient(
